client/src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&family=Average&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Georama:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Karla:ital,wght@0,200..800;1,200..800&family=Koulen&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Questrial&family=Raleway:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

@keyframes borderStripeAnimation {
  0% {
    border-image-source: linear-gradient(
      90deg,
      #c90647,
      #357004,
      #0b83bb,
      #c7b406
    );
  }

  25% {
    border-image-source: linear-gradient(
      90deg,
      #76ff03,
      #ff4081,
      #ffeb3b,
      #40c4ff
    );
  }

  50% {
    border-image-source: linear-gradient(
      90deg,
      #ff4081,
      #76ff03,
      #40c4ff,
      #ffeb3b
    );
  }

  100% {
    border-image-source: linear-gradient(
      90deg,
      #76ff03,
      #ff4081,
      #ffeb3b,
      #40c4ff
    );
  }
}

.border-gradient {
  border: 4px solid transparent;
  border-image-slice: 1;
  border-image-source: linear-gradient(
    90deg,
    #c90647,
    #357004,
    #0b83bb,
    #c7b406
  );
  animation: borderStripeAnimation 5s linear infinite;
}

@keyframes pulseSlow {
  0%,
  100% {
    opacity: 0.2;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.1);
  }
}

.animate-pulseSlow {
  animation: pulseSlow 4s ease-in-out infinite;
}

.animation-delay-500 {
  animation-delay: 0.5s;
}

.animation-delay-1000 {
  animation-delay: 1s;
}



@keyframes borderGradientFlow {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.border-gradient {
  border-image: linear-gradient(
    270deg,
    #facc15,
    /* yellow */ #38bdf8,
    /* sky */ #f97316,
    /* orange */ #ef4444,
    /* red */ #facc15
  );
  border-image-slice: 1;
  background-size: 800% 800%;
  animation: borderGradientFlow 10s ease infinite;
}

@keyframes slowSpin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.slow-spin {
  animation: slowSpin 7s linear infinite;
  will-change: transform;
}

.login-bg {
  position: relative;
  min-height: 100vh;
  overflow: hidden;
}

.login-bg::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: url("/LoginBg.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  opacity: 0.1;
  pointer-events: none;
  z-index: 0;
}

.login-bg > * {
  position: relative;
  z-index: 1;
}

.slick-dots li button:before {
  color: #b6b6b6 !important;
  opacity: 1 !important;
  font-size: 8px !important;
  margin-top: 1rem;
  width: 2rem;
}

.slick-dots li.slick-active button:before {
  color: #0400ff !important;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
  appearance: textfield;
}

.scrollbar-hidden {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.scrollbar-hidden::-webkit-scrollbar {
  display: none;
}

::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-track {
  background: #585858;
}

::-webkit-scrollbar-thumb {
  background: #66fcf1;
  border-radius: 8px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

.custom-scrollbar::-webkit-scrollbar {
  width: 5px !important;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: #797979 !important;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: #0400ff !important;
  border-radius: 10px !important;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: #000000 !important;
}

